<resources>
    <string name="app_name">Photon</string>
    <string name="title_activity_root">RootActivity</string>

    <string name="roboto_regular">sans-serif</string>
    <string name="roboto_light">sans-serif-light</string>
    <string name="roboto_medium">sans-serif-medium</string>

    <string name="open_drawer">open</string>
    <string name="close_drawer">close</string>
    <string name="main_screen">Главная</string>
    <string name="account_screen">Профиль</string>
    <string name="download_photo">Загрузить</string>

    <string name="dish_meat">meat</string>
    <string name="dish_fish">fish</string>
    <string name="dish_vegetables">vegetables</string>
    <string name="dish_fruit">fruit</string>
    <string name="dish_cheese">cheese</string>
    <string name="dish_desserts">desserts</string>
    <string name="dish_drinks">drinks</string>

    <string name="nuances_red">red</string>
    <string name="nuances_orange">orange</string>
    <string name="nuances_yellow">yellow</string>
    <string name="nuances_green">green</string>
    <string name="nuances_blue_light">lightBlue</string>
    <string name="nuances_blue">blue</string>
    <string name="nuances_purple">purple</string>
    <string name="nuances_brown">brown</string>
    <string name="nuances_black">black</string>
    <string name="nuances_white">white</string>

    <string name="decor_simple">simple</string>
    <string name="decor_holiday">holiday</string>

    <string name="temperature_hot">hot</string>
    <string name="temperature_middle">middle</string>
    <string name="temperature_cold">cold</string>

    <string name="light_natural">natural</string>
    <string name="light_synthetic">synthetic</string>
    <string name="light_mixed">mixed</string>

    <string name="light_direction_side_light">sideLight</string>
    <string name="light_direction_back_light">backlight</string>
    <string name="light_direction_direct">direct</string>
    <string name="light_direction_mixed">mixed</string>

    <string name="light_source_one">one</string>
    <string name="light_source_two">two</string>
    <string name="light_source_three">three</string>
    <string name="accept_btn">Ок</string>
    <string name="cancel_btn">Отмена</string>
    <string name="registration_btn">Регистрация</string>
    <string name="autorization_message">Авторизуйтесь, \nчтобы посмотреть \nданные профиля</string>
    <string name="enter_btn">Вход</string>
    <string name="have_not_album_account">У вас нет альбомов.\nДобавьте новый, чтобы \nсохранять карточки</string>
    <string name="photocards">Карты</string>
    <string name="search">Найти</string>
    <string name="autorization">Авторизация</string>
    <string name="create_album">Создать альбом</string>
    <string name="save">Сохранить</string>
</resources>
