<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        style="@style/FiltersTitle"
        android:text="Блюдо"/>

    <RadioGroup
        android:id="@+id/radio_group_dish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/ic_meat"
            style="@style/RadioButton"
            android:drawableTop="@drawable/ic_custom_meat_black_24dp"
            android:tag="@string/dish_meat"
            android:text="Мясо"/>

        <RadioButton
            android:id="@+id/ic_fish"
            style="@style/RadioButton"
            android:drawableTop="@drawable/ic_custom_fish_black_24dp"
            android:tag="@string/dish_fish"
            android:text="Рыба"/>

        <RadioButton
            android:id="@+id/ic_vegetables"
            style="@style/RadioButton"
            android:drawableTop="@drawable/ic_custom_vegetables_black_24dp"
            android:tag="@string/dish_vegetables"
            android:text="Овощи"/>

        <RadioButton
            android:id="@+id/ic_fruit"
            style="@style/RadioButton"
            android:drawableTop="@drawable/ic_custom_fruit_black_24dp"
            android:tag="@string/dish_fruit"
            android:text="Фрукты"/>

        <RadioButton
            android:id="@+id/ic_cheese"
            style="@style/RadioButton"
            android:drawableTop="@drawable/ic_custom_cheese_black_24dp"
            android:tag="@string/dish_cheese"
            android:text="Сыр"/>

        <RadioButton
            android:id="@+id/ic_desserts"
            style="@style/RadioButton"
            android:drawableTop="@drawable/ic_dish_desserts_black"
            android:tag="@string/dish_desserts"
            android:text="Десерты"/>

        <RadioButton
            android:id="@+id/ic_drinks"
            style="@style/RadioButton"
            android:drawableTop="@drawable/ic_custom_drinks_black_24dp"
            android:tag="@string/dish_drinks"
            android:text="Напитки"/>
    </RadioGroup>


    <TextView
        style="@style/FiltersTitle"
        android:text="Оттенки"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_normal_16"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/red_cb"
            style="@style/RadioButton"
            android:drawableTop="@drawable/ic_color_red_24dp"
            android:tag="@string/nuances_red"
            android:text="Красный"/>

        <CheckBox
            android:id="@+id/orange_cb"
            style="@style/RadioButton"
            android:drawableTop="@drawable/ic_color_orange_24dp"
            android:tag="@string/nuances_orange"
            android:text="Оранжевый"/>

        <CheckBox
            android:id="@+id/yellow_cb"
            style="@style/RadioButton"
            android:drawableTop="@drawable/ic_color_yellow_24dp"
            android:tag="@string/nuances_yellow"
            android:text="Желтый"/>

        <CheckBox
            android:id="@+id/green_cb"
            style="@style/RadioButton"
            android:drawableTop="@drawable/ic_color_green_24dp"
            android:tag="@string/nuances_green"
            android:text="Зеленый"/>

        <CheckBox
            android:id="@+id/blue_light_cb"
            style="@style/RadioButton"
            android:drawableTop="@drawable/ic_color_light_blue_24dp"
            android:tag="@string/nuances_blue_light"
            android:text="Голубой"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/blue_cb"
            style="@style/RadioButton"
            android:drawableTop="@drawable/ic_color_dark_blue_24dp"
            android:tag="@string/nuances_blue"
            android:text="Синий"/>

        <CheckBox
            android:id="@+id/purple_cb"
            style="@style/RadioButton"
            android:drawableTop="@drawable/ic_color_purple_24dp"
            android:tag="@string/nuances_purple"
            android:text="Фиолетовый"/>

        <CheckBox
            android:id="@+id/brown_cb"
            style="@style/RadioButton"
            android:drawableTop="@drawable/ic_color_brown_24dp"
            android:tag="@string/nuances_brown"
            android:text="Коричневый"/>

        <CheckBox
            android:id="@+id/black_cb"
            style="@style/RadioButton"
            android:drawableTop="@drawable/ic_color_black_24dp"
            android:tag="@string/nuances_black"
            android:text="Черный"/>

        <CheckBox
            android:id="@+id/white_cb"
            style="@style/RadioButton"
            android:drawableTop="@drawable/ic_color_white_24dp"
            android:tag="@string/nuances_white"
            android:text="Белый"/>
    </LinearLayout>


    <TextView
        style="@style/FiltersTitle"
        android:text="Оформление"/>

    <RadioGroup
        android:id="@+id/radio_group_decor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/ic_usually"
            style="@style/RadioButton"
            android:drawableTop="@drawable/ic_custom_tea_black_24dp"
            android:tag="@string/decor_simple"
            android:text="Обычное"/>

        <RadioButton
            android:id="@+id/ic_holiday"
            style="@style/RadioButton"
            android:drawableTop="@drawable/ic_custom_cocktail_black_24dp"
            android:tag="@string/decor_holiday"
            android:text="Праздничное"/>
    </RadioGroup>


    <TextView
        style="@style/FiltersTitle"
        android:text="Температура"/>

    <RadioGroup
        android:id="@+id/radio_group_temperature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/ic_hot"
            style="@style/RadioButton"
            android:drawableTop="@drawable/ic_custom_temperature_hot_black_24dp"
            android:tag="@string/temperature_hot"
            android:text="Горячая"/>

        <RadioButton
            android:id="@+id/ic_comfort"
            style="@style/RadioButton"
            android:drawableTop="@drawable/ic_custom_temperature_comfort_black_24dp"
            android:tag="@string/temperature_middle"
            android:text="Комнатная"/>

        <RadioButton
            android:id="@+id/ic_cold"
            style="@style/RadioButton"
            android:drawableTop="@drawable/ic_custom_temperature_cold_black_24dp"
            android:tag="@string/temperature_cold"
            android:text="Холодная"/>
    </RadioGroup>

    <TextView
        style="@style/FiltersTitle"
        android:text="Свет"/>

    <RadioGroup
        android:id="@+id/radio_group_light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/ic_natural"
            style="@style/RadioButton"
            android:drawableTop="@drawable/ic_custom_light_natural_black_24dp"
            android:tag="@string/light_natural"
            android:text="Естественный"/>

        <RadioButton
            android:id="@+id/ic_synthetic"
            style="@style/RadioButton"
            android:drawableTop="@drawable/ic_custom_light_synthetic_black_24dp"
            android:tag="@string/light_synthetic"
            android:text="Искуственный"/>

        <RadioButton
            android:id="@+id/ic_mixed"
            style="@style/RadioButton"
            android:drawableTop="@drawable/ic_custom_light_mixed_black_24dp"
            android:tag="@string/light_mixed"
            android:text="Смешанный"/>
    </RadioGroup>

    <TextView
        style="@style/FiltersTitle"
        android:text="Направление света"/>

    <RadioGroup
        android:id="@+id/radio_group_dir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/ic_front"
            style="@style/RadioButton"
            android:drawableTop="@drawable/ic_custom_light_dir_front_black_24dp"
            android:tag="@string/light_direction_side_light"
            android:text="Прямой"/>

        <RadioButton
            android:id="@+id/ic_back"
            style="@style/RadioButton"
            android:drawableTop="@drawable/ic_custom_light_dir_back_black_24dp"
            android:tag="@string/light_direction_back_light"
            android:text="Контровой"/>

        <RadioButton
            android:id="@+id/ic_side"
            style="@style/RadioButton"
            android:drawableTop="@drawable/ic_custom_light_dir_side_black_24dp"
            android:tag="@string/light_direction_direct"
            android:text="Боковой"/>

        <RadioButton
            android:id="@+id/ic_mixed_light"
            style="@style/RadioButton"
            android:drawableTop="@drawable/ic_custom_light_dir_mixed"
            android:tag="@string/light_direction_mixed"
            android:text="Смешанный"/>
    </RadioGroup>

    <TextView
        style="@style/FiltersTitle"
        android:text="Источник света"/>

    <RadioGroup
        android:id="@+id/radio_group_light_source"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/ic_one"
            style="@style/RadioButton"
            android:drawableTop="@drawable/ic_custom_light_count_1_black_24dp"
            android:tag="@string/light_source_one"
            android:text="Один"/>

        <RadioButton
            android:id="@+id/ic_two"
            style="@style/RadioButton"
            android:drawableTop="@drawable/ic_custom_light_count_2_black_24dp"
            android:tag="@string/light_source_two"
            android:text="Два"/>

        <RadioButton
            android:id="@+id/ic_three"
            style="@style/RadioButton"
            android:drawableTop="@drawable/ic_custom_light_count_3_black_24dp"
            android:tag="@string/light_source_three"
            android:text="Три"/>
    </RadioGroup>
</LinearLayout>