<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:icon="@drawable/ic_custom_home_black_24dp"
        android:title="@string/main_screen"
        android:enabled="true"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_account"
        android:icon="@drawable/ic_custom_profile_black_24dp"
        android:title="@string/account_screen"
        android:enabled="true"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_upload"
        android:icon="@drawable/ic_custom_upload_black_24dp"
        android:title="@string/download_photo"
        android:enabled="true"
        app:showAsAction="ifRoom"/>
</menu>